src/tests/snapshots/synoik__tests__window_opening__check_target_size@omT-dwF1000-wfsBU-t.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\ndefault column width: F1000\nwant fullscreen: BU\ntabbed"
expression: snapshot
---
initial configure:
size: 1239 × 688, bounds: 1239 × 688, states: []

post-map configures:
size: 1239 × 688, bounds: 1239 × 688, states: [Activated]
